@@ -1,5 +1,11 @@
 Version 2.5.1
 
+	Whichdb new option -showall to see which databases are being
+	searched for use where searches hang. The order of searching is
+	undefined - it depends on the order in which databases are
+	returned from the internal table, which is unrelated to the order
+	in which they were defined.
+
 	Wordmatch alignments save the entire sequence but use part only.
 	Fixed all alignment formats to work with these by adding a
 	SubOffset attribute.
